New-Upload-1755854042013/objects/Profile_Class_Access__c.object
<CustomObject>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <description>Name of the Apex class</description>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the class access is enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record (displays Profile Name)</description>
        <label>Profile Name Lookup</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Class Accesses by Name</relationshipLabel>
        <relationshipName>Class_Accesses_By_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record</description>
        <label>Profile Name</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Class Accesses</relationshipLabel>
        <relationshipName>Class_Accesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Profile Class Access</label>
    <nameField>
        <displayFormat>PCA-{0000}</displayFormat>
        <label>Class Access Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Class Accesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>